# hourly-reminder

./: .gitignore  Cargo.toml  README.md
assets/: LICENSE.md  License.txt  Put in your  audio.ogg  or  audio.wav  file here.txt
src/: auto_launch.rs  main.rs  timer.rs  tray_icon_tao.rs
