[package]
name = "hourly-reminder"
version = "0.3.0"
edition = "2024"
license = "Unlicense"
publish = false
description = "Sound reminder for hourly time"

[dependencies]
auto-launch = "~0.5.0"
chrono = "~0.4.40"
image = { version = "~0.25.5", default-features = false, features = ["png"]}
rodio = "~0.20.1"
serde = "~1.0.219"
tao = "~0.32.8"
tokio = {version = "~1.43.0", features = ["macros", "rt", "rt-multi-thread", "time", "sync"]}
toml = "~0.8.20"
tray-icon = "~0.20.0"
windows-sys = "~0.59.0"